# subxt-riscv-example

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
