[package]
name = "subxt-riscv-example"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { version = "0.37.0", default-features = false, features = ["native"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time"] }
jsonrpsee-ws-client = { version = "0.24.5", default-features = false }
jsonrpsee-core = { version = "0.24.5", features = ["client"] }
futures = "0.3"
serde_json = "1"