[package]
name = "subxt-riscv-example"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { version = "0.38.0", features = ["native"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "time"] }
jsonrpsee-ws-client = { version = "0.24.7", default-features = false }
jsonrpsee-core = { version = "0.24.7", features = ["client"] }
futures = "0.3"
serde_json = "1"
